<resources>
    <string name="app_name" translatable="false">QFU</string>
    <string name="roleUser" translatable="false">User</string>
    <string name="roleCreator" translatable="false">Creator</string>
    <string name="roleAdmin" translatable="false">Admin</string>
    <string name="_ph" translatable="false">%1$s</string>
    <string name="authorNameDateAndQuestionAmount" translatable="false">%1$s - %2$s - %3$s</string>
    <string name="cosAndSubject" translatable="false">%1$s - %2$s</string>
    <string name="helloHome">Hello, %1$s</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="questions">Questions</string>
    <string name="question">Question</string>
    <string name="questionText">Question text</string>
    <string name="questionsOfQuestionnaire">Questions of questionnaire</string>
    <string name="multipleChoice">Multiple choice</string>
    <string name="isMultipleChoice">Is multiple choice?</string>
    <string name="singleChoice">Single choice</string>
    <string name="answers">Answers</string>
    <string name="faculty">Faculty</string>
    <string name="faculties">Faculties</string>
    <string name="courseOfStudies">Course of Studies</string>
    <string name="coursesOfStudies">Courses of Studies</string>
    <string name="coursesOfStudiesWithoutFaculty">Courses of studies without Faculty</string>
    <string name="degree">Degree</string>
    <string name="degreeBachelor">Bachelor</string>
    <string name="degreeMaster">Master</string>
    <string name="subject">Subject</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="userName">Username</string>
    <string name="author">Author</string>
    <string name="authors">Authors</string>
    <string name="authorName">Author name</string>
    <string name="percentageCompleted">% completed</string>
    <string name="questionnairesPresent">%1$s Questionnaires present</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="createQuestionnaire">Create questionnaire</string>
    <string name="editQuestionnaire">Edit questionnaire</string>
    <string name="copyQuestionnaire">Copy questionnaire</string>
    <string name="saveQuestionnaire">Save questionnaire</string>
    <string name="addAnswer">Add answer</string>
    <string name="addQuestion">Add question</string>
    <string name="editAnswer">Edit answer</string>
    <string name="editQuestion">Edit question</string>
    <string name="saveQuestion">Save question</string>
    <string name="clickToWriteYourQuestion">Click to type your question!</string>
    <string name="answerText">Answer text</string>
    <string name="clickToWriteCourAnswer">Click to type your answer!</string>
    <string name="shouldPublishQuestionnaire">Publish?</string>
    <string name="errorSelectOneCorrectAnswer">No correct answer selected!</string>
    <string name="errorQuestionnaireHasNoTitle">Questionnaire has no title!</string>
    <string name="errorQuestionnaireHasNoSubject">Questionnaire has no subject!</string>
    <string name="errorQuestionHasNoAnswers">Question don\'t have answers!</string>
    <string name="errorAnswersDoNotHaveText">Some answers don\'t have a text yet!</string>
    <string name="errorQuestionHasNoText">Question has no text yet!</string>
    <string name="errorQuestionIsSingleChoiceAndHasMultipleCorrectAnswersAddEdit">Question is single choice but has multiple correct answers!</string>
    <string name="createFaculty">Create faculty</string>
    <string name="editFaculty">Edit faculty</string>
    <string name="saveFaculty">Save faculty</string>
    <string name="createCourseOfStudies">Create course of studies</string>
    <string name="editCourseOfStudies">Edit course of studies</string>
    <string name="saveCourseOfStudies">Save course of studies</string>
    <string name="createUser">Create user</string>
    <string name="editUser">Edit user</string>
    <string name="saveUser">Save user</string>
    <string name="info">Info</string>
    <string name="questionDistribution">Question distribution</string>
    <string name="updateQuestionnaireTitle">Update title</string>
    <string name="updateQuestionnaireSubject">Update subject</string>
    <string name="updateAnswerText">Update answer text</string>
    <string name="updateFacultyAbbreviation">Update abbreviation</string>
    <string name="updateFacultyName">Update faculty name</string>
    <string name="updateCourseOfStudiesAbbreviation">Update abbreviation</string>
    <string name="updateCourseOfStudiesName">Update name</string>
    <string name="updateUserName">Update username</string>
    <string name="updatePassword">Update password</string>
    <string name="updateQuestionText">Update question text</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="changePassword">Change password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginHere">Already got an account? Login</string>
    <string name="registerHere">Don\'t have an account? Register</string>
    <string name="errorPasswordsDoNotMatch">Passwords do not match</string>
    <string name="errorOccurredWhileRegisteringUser">Error occurred while registering User!</string>
    <string name="errorOccurredWhileLoggingInUser">Error occurred while logging in User!</string>
    <string name="errorUserAlreadyExists">User already Exists!</string>
    <string name="userLoggedInSuccessfully">Logged in Successfully!</string>
    <string name="errorUserNameOrPassWordWrong">Username or Password wrong!</string>
    <string name="userRegisteredSuccessfully">Registered successfully!</string>
    <string name="userRegistrationFailed">Registration Failed</string>
    <string name="errorLoggedOutBecauseCredentialsChanged">Logged out because credentials changed!</string>
    <string name="undo">Undo</string>
    <string name="pleaseAnswerAllQuestionsText">Please answer all Questions first!</string>
    <string name="questionsDeleted">Questions deleted</string>
    <string name="questionDeleted">Question deleted</string>
    <string name="questionnaireDeleted">Questionnaire deleted</string>
    <string name="questionnaireDownloaded">Questionnaire downloaded</string>
    <string name="answersDeleted">Answers deleted</string>
    <string name="answerDeleted">Answer deleted</string>
    <string name="deletedFaculty">Faculty deleted</string>
    <string name="errorCouldNotDeleteFaculty">Could not delete faculty</string>
    <string name="successfullySavedFaculty">Successfully saved faculty</string>
    <string name="errorCouldNotSaveFaculty">Could not save faculty</string>
    <string name="errorFacultyNameAlreadyUsed">Faculty name already used</string>
    <string name="errorFacultyAbbreviationAlreadyUsed">Faculty abbreviation is already used</string>
    <string name="deletedCourseOfStudies">Course of studies deleted</string>
    <string name="errorCouldNotDeleteCourseOfStudies">Could not delete course of studies</string>
    <string name="successfullySavedCourseOfStudies">Successfully saved course of studies</string>
    <string name="errorCouldNotSaveCourseOfStudies">Could not save course of studies</string>
    <string name="errorCourseOfStudiesNameAlreadyUsed">Course of studies name already used</string>
    <string name="errorCourseOfStudiesAbbreviationAlreadyUsed">Course of studies abbreviation already used</string>
    <string name="errorNoFacultyAssigned">Please assign at least one faculty</string>
    <string name="userDeleted">User deleted</string>
    <string name="userWasCreated">User was created!</string>
    <string name="errorCouldNotCreateUser">Could not create user!</string>
    <string name="errorCouldNotDeleteUser">Could not delete user</string>
    <string name="shuffleTypeChanged">Shuffle type changed</string>
    <string name="syncUnsuccessful">Could not sync data!</string>
    <string name="syncSuccessful">Questionnaire synced!</string>
    <string name="errorCouldNotSyncUserData">Could not sync User data</string>
    <string name="errorYourUserDoesNotExistAnymore">Your User does not exists anymore!/nYou were logged out!</string>
    <string name="userDataUpdated">User data updated</string>
    <string name="userDataIsAlreadyUpToDate">User data is already up to date</string>
    <string name="errorCouldNotSyncFacultyAndCosData">Could not sync faculty and course of studies</string>
    <string name="onlyFacultiesCouldBeSynced">Only faculties could be synced</string>
    <string name="syncedFacultyAndCourseOfStudiesData">Faculties and course of studies were synced!</string>
    <string name="facultyAndCourseOfStudiesDataAlreadyUpToDate">Faculty and course of studies are already up to date</string>
    <string name="yourDataIsAlreadyUpToDate">Your data is already up to date!</string>
    <string name="questionnaireDataSynced">Questionnaires synced</string>
    <string name="errorCouldNotSyncQuestionnaires">Could not sync questionnaires</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="filterFaculties">Filter faculties</string>
    <string name="filterCourseOfStudies">Filter course of studies</string>
    <string name="filterAuthors">Filter authors</string>
    <string name="onlineSearch">Online search</string>
    <string name="onlineSearchFilters">Online search filters</string>
    <string name="localSearchFilters">Local search filters</string>
    <string name="searchForQuestionnaires">Search for Questionnaires…</string>
    <string name="searchForQuestions">Search for Questions…</string>
    <string name="searchForFaculties">Search for faculties…</string>
    <string name="searchForCourseOfStudies">Search for course of studies…</string>
    <string name="userSearchFilters">User search filters</string>
    <string name="searchForUsers">Search for users…</string>
    <string name="searchForAuthors">Search for authors…</string>
    <string name="selectedRoles">Selected roles</string>
    <string name="orderByQuestionCount">Question count</string>
    <string name="orderByProgress">Progress</string>
    <string name="orderAscending">Ascending</string>
    <string name="orderDescending">Descending</string>
    <string name="noResultsFoundTitle">No results found</string>
    <string name="noResultsFoundText">Try another search query or select different filters</string>
    <string name="share">Share</string>
    <string name="shareQuestionnaire">Share questionnaire</string>
    <string name="shareQuestionnaireText">Enter the Username of the person you want to share this questionnaire with:</string>
    <string name="logout">Logout</string>
    <string name="preference">Preferences</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="shuffleType">Shuffle Type</string>
    <string name="synchronization">Synchronization</string>
    <string name="syncUserData">User data</string>
    <string name="syncQuestionnaires">Questionnaires</string>
    <string name="syncCoursesOfStudiesAndFaculties">Courses of studies and faculties</string>
    <string name="cancel">Cancel</string>
    <string name="logoutWarningTitle">Logout Warning</string>
    <string name="logoutWarning">This action will delete all locally cached data…\nUnsynchronized data will be lost.</string>
</resources>