<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/title"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/grid_2"
                android:layout_marginHorizontal="@dimen/grid_6"
                android:text="@string/shareQuestionnaire"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/work_sans_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:layout_marginTop="@dimen/grid_2"
                android:layout_marginHorizontal="@dimen/grid_6"
                android:text="@string/shareQuestionnaireText"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tilUserName"
                style="@style/Style.QuizApp.TextInputLayout"
                android:hint="@string/userName"
                android:elevation="2.5dp"
                android:layout_marginHorizontal="@dimen/grid_6"
                android:layout_marginTop="@dimen/grid_4"
                app:startIconDrawable="@drawable/ic_person"
                app:layout_constraintVertical_bias="0.375"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUserName"
                    style="@style/Style.QuizApp.TextInputEditText"
                    android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btnShare"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserName"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="@dimen/grid_4"
                android:layout_marginEnd="@dimen/grid_6" />

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btnCancel"
                android:layout_marginEnd="@dimen/grid_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserName"
                android:layout_marginVertical="@dimen/grid_4"
                app:layout_constraintEnd_toStartOf="@+id/btnShare" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>