<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_round_corners_15dp"
        android:backgroundTint="?colorOnPrimary"
        xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/preferencesHeader"
            android:text="@string/preference"
            android:textColor="@color/hfuBrightGreen"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/grid_4"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_1"
            android:layout_marginBottom="@dimen/grid_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferencesHeader"
            app:layout_constraintBottom_toBottomOf="parent">

        <com.example.quizapp.view.customimplementations.settings.SettingsItemDropDownLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnTheme"
                app:icon="@drawable/ic_dark_mode_alt"
                app:title="@string/theme"
                tools:text="Light"
                app:dropDownIcon="@drawable/ic_arrow_down"
                app:layout_constraintTop_toTopOf="parent" />

        <com.example.quizapp.view.customimplementations.settings.SettingsItemDropDownLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLanguage"
                app:icon="@drawable/ic_language"
                app:title="@string/language"
                tools:text="English"
                app:dropDownIcon="@drawable/ic_arrow_down"
                app:layout_constraintTop_toBottomOf="@id/btnTheme" />

        <com.example.quizapp.view.customimplementations.settings.SettingsItemDropDownLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnShuffleType"
                app:icon="@drawable/ic_shuffle_new"
                app:title="@string/shuffleType"
                tools:text="None"
                app:dropDownIcon="@drawable/ic_arrow_down"
                app:layout_constraintTop_toBottomOf="@id/btnLanguage" />

        <com.example.quizapp.view.customimplementations.settings.SettingsItemDropDownLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnPreferredCos"
                app:icon="@drawable/ic_course_of_studies"
                app:title="@string/courseOfStudies"
                tools:text="WIB"
                app:dropDownIcon="@drawable/ic_arrow_down"
                app:layout_constraintTop_toBottomOf="@id/btnShuffleType" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_width="match_parent"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/btnPreferredCos">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:padding="10dp"
                    android:layout_marginStart="@dimen/grid_1"
                    app:srcCompat="@drawable/ic_share"/>

            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/title"
                    android:text="@string/share"
                    android:gravity="bottom"
                    android:textSize="15sp"
                    android:lines="1"
                    android:textColor="?dominantTextColor"
                    app:layout_constraintHeight_percent="0.5"
                    android:layout_marginStart="@dimen/grid_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon"
                    app:layout_constraintEnd_toStartOf="@id/switchButton"/>

            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text"
                    android:text="Can other users share Questionnaires with you?"
                    android:gravity="top"
                    android:textSize="13sp"
                    android:paddingBottom="@dimen/grid_2"
                    app:layout_constraintEnd_toStartOf="@id/switchButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:layout_constraintStart_toStartOf="@+id/title" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchButton"
                    android:scaleY="0.75"
                    android:scaleX="0.75"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>