<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?colorOnPrimary"
        app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/tvTitle"
                android:text="@string/logoutWarningTitle"
                android:background="@drawable/background_round_corners_10dp"
                android:backgroundTint="@color/transparent"
                android:gravity="center_vertical"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="0.25sp"
                android:layout_marginTop="@dimen/grid_2"
                android:lines="1"
                android:textStyle="bold"
                android:fontFamily="@font/work_sans_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/grid_6" />

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvText"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginHorizontal="@dimen/grid_6"
                android:text="@string/logoutWarning"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?colorPrimary"
                android:text="@string/logout"
                android:id="@+id/btnLogout"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="1"
                android:layout_marginTop="@dimen/grid_8"
                android:fontFamily="@font/work_sans_medium"
                app:layout_constraintTop_toBottomOf="@+id/tvText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>